data/all_generated_tests/raw_wast_tests/nop_StackCorruption_149.wast
;; 10. **Test Description**:    Include `nop` within an exception handling block that modifies the stack state (try-catch). Verify the stack's integrity after exceptions are thrown.    **Constraint Checked**: Ensures `nop` does not alter stack behavior during exception handling.    **Relation to Stack Corruption**: Exception handling requires precise stack management; any corruption here can lead to further runtime errors.

(assert_invalid
  (module 
    (func 
      (try 
        (do
          (nop)
          (i32.const 1)
          (i32.const 2)
          (i32.add)
        )
        (catch_all
          (i32.const 3)
        )
      )
    )
  )
  "type mismatch"
)